@startuml
hide empty members

class MenuTestDrive {
	+{static} main(args: String[]): void
}

class Menu  {
	-name: String
	-description: String
	-menuComponents: List<MenuComponent>

	+Menu(name: String, description: String)
	+add(menuComponent: MenuComponent): void
	+remove(menuComponent: MenuComponent): void
	+getChild(k: int): MenuComponent
	+getName(): String
	+getDescription(): String
	+print(): void
	+accept(visitor: Visitor): void
}

class MenuItem  {
	-name: String
	-description: String
	-vegetarian: boolean
	-price: double
	+MenuItem(name: String, description: String, vegetarian: boolean, price: double)
	+getName(): String
	+getDescription(): String
	+getPrice(): double
	+isVegetarian(): boolean
	+print(): void
	+accept(visitor: Visitor): void
}

class MenuItemWithSizes {
        -name : String
        -description : String
        -size: MenuItemSize
        -price : double

        +MenuItemWithSizes(name : String, description : String, size: MenuSize, price : double)
        +getName() : String
        +getDescription() : String
         +getSize(): MenuSize
        +getPrice() : double
        +print() : void
		+accept(visitor: Visitor): void
    }

enum MenuItemSize {
        SMALL
        MEDIUM
        LARGE
        --
        -printName : String
        --
        +toString() : String
        +fromString(text : String) : MenuItemSize
    }

class Waitress  {
	-allMenus: MenuComponent

	+Waitress(allMenus: MenuComponent)
	+printMenu(): void
}

abstract class MenuComponent  {
	+add(menuComponent: MenuComponent): void
	+remove(menuComponent: MenuComponent): void
	+getChild(k: int): MenuComponent
	+getName(): String
	+getDescription(): String
	+getPrice(): double
	+isVegetarian(): boolean
	+print(): void
	+{abstract} accept(visitor: Visitor): void
}

class VegetarianVisitor {
	-vegetarianItems: List<MenuComponent>
	
	+VegetarianVisitor()
	+getVegetarianItems(): List<MenuComponent>
	+visit(menu: Menu): void
	+visit(menuItem: MenuItem): void
	+visit(menuItemWithSizes: MenuItemWithSizes): void
}

interface Visitor  {
	visit(menu: Menu): void
	visit(menuItem: MenuItem): void
	visit(menuItemWithSizes: MenuItemWithSizes): void
}


MenuItemWithSizes --> MenuItemSize
Menu --> "*" MenuComponent 
MenuComponent <|-- Menu
MenuComponent <|-- MenuItem
MenuComponent <|-- MenuItemWithSizes
Waitress --> MenuComponent
VegetarianVisitor --> "*" MenuComponent
Visitor <|.. VegetarianVisitor

MenuTestDrive ..> MenuComponent : allMenus
MenuTestDrive ..> Waitress : waitress
MenuTestDrive ..> VegetarianVisitor 
@enduml